--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
+    "react-simple-star-rating": "^5.1.7",
     "sass": "^1.66.1",
     "typescript": "5.2.2"
   }
